[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Ruby parser nodes data"
edition = "2018"
license = "MIT"
name = "lib-ruby-parser-nodes"
repository = "https://github.com/lib-ruby-parser/nodes"
version = "0.47.0"

[dependencies]
liquid = "0.26.0"
liquid-core = "0.26.0"
serde = {version = "1.0", features = ["derive"]}
