[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Ruby parser nodes data"
edition = "2021"
license = "MIT"
name = "lib-ruby-parser-nodes"
repository = "https://github.com/lib-ruby-parser/nodes"
version = "0.55.0"

[dependencies]
liquid = "= 0.26.0"
liquid-core = "= 0.26.1"
serde = {version = "1.0", features = ["derive"]}
